# hopbox-desktop

./: AGENTS.md  CLAUDE.md  Cargo.toml  bootstrap.md
src/: app.rs  config.rs  main.rs
src/ai/: agent.rs  context.rs  injector.rs  mod.rs
src/session/: local.rs  remote.rs
src/tui/: ai_panel.rs  layout.rs  mod.rs  terminal.rs
